--- a/package.json
+++ b/package.json
@@ -75,7 +75,10 @@
   "dependencies": {
     "bootstrap": "^3.3.7",
     "c3": "^0.4.17",
+    "chart.js": "^2.8.0",
+    "csv-writer": "^1.3.0",
     "d3": "^3.5.17",
+    "fast-csv": "^2.5.0",
     "font-awesome": "^4.7.0",
     "jquery": "^3.2.1",
     "jspdf": "^1.3.5",
